--- a/app/src/main/res/layout/document_activity.xml
+++ b/app/src/main/res/layout/document_activity.xml
@@ -1,64 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/rlContainer"
     tools:context="com.leon.estimate.Activities.DocumentActivity">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:weightSum="10"
         android:background="#ffffff"
         android:orientation="vertical"
-        android:weightSum="10"
         tools:context=".ImageCropActivity">
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
             android:layout_weight="1">
-
             <ImageView
                 android:id="@+id/ivRotate"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_alignParentEnd="true"
+                android:layout_marginEnd="8dp"
                 android:layout_centerVertical="true"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:foreground="?android:selectableItemBackground"
                 android:padding="5dp"
                 android:src="@drawable/ic_rotate" />
-
             <ImageView
                 android:id="@+id/ivRebase"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_centerInParent="true"
-                android:layout_centerVertical="true"
                 android:foreground="?android:selectableItemBackground"
                 android:padding="5dp"
-                android:src="@drawable/ic_align" />
-
+                android:src="@drawable/ic_align"
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true" />
             <ImageView
                 android:id="@+id/ivInvert"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
                 android:foreground="?android:selectableItemBackground"
                 android:padding="5dp"
-                android:src="@drawable/ic_invert_colors" />
+                android:src="@drawable/ic_invert_colors"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true" />
         </RelativeLayout>
-
         <FrameLayout
             android:id="@+id/frameLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_gravity="center"
             android:layout_margin="10dp"
+            android:layout_gravity="center"
             android:layout_weight="8">
 
             <FrameLayout
@@ -69,7 +64,7 @@
                 android:layout_margin="10dp">
 
                 <ImageView
-                    android:id="@+id/imageView1"
+                    android:id="@+id/imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -87,37 +82,34 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_weight="1"
             android:gravity="center">
-
             <Button
                 android:id="@+id/btnImageCrop"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
+                android:minWidth="150dp"
                 android:layout_alignParentEnd="true"
                 android:foreground="?android:selectableItemBackground"
-                android:minWidth="150dp"
                 android:shadowRadius="10"
                 android:textColor="#ffffff" />
-
             <Button
                 android:id="@+id/btnClose"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
+                android:minWidth="150dp"
                 android:layout_alignParentStart="true"
                 android:foreground="?android:selectableItemBackground"
-                android:minWidth="150dp"
                 android:shadowRadius="10"
                 android:textColor="#ffffff" />
         </RelativeLayout>
     </LinearLayout>
-
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/halfTransparentBackground"
         android:padding="100dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
