--- a/app/src/main/res/layout/paper_activity.xml
+++ b/app/src/main/res/layout/paper_activity.xml
@@ -28,7 +28,7 @@
                 <ImageView
                     android:id="@+id/imageView1"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:src="@drawable/icon_finder_camera" />
 
                 <Button
