--- a/app/src/main/res/layout/crop_activity.xml
+++ b/app/src/main/res/layout/crop_activity.xml
@@ -1,59 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rlContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/rlContainer"
-    tools:context="com.leon.estimate.Activities.DocumentActivity">
+    tools:context="com.leon.estimate.Activities.CropActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="10"
         android:background="#ffffff"
         android:orientation="vertical"
+        android:weightSum="10"
         tools:context=".ImageCropActivity">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_weight="1">
+
             <ImageView
                 android:id="@+id/ivRotate"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="8dp"
                 android:layout_centerVertical="true"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:foreground="?android:selectableItemBackground"
                 android:padding="5dp"
                 android:src="@drawable/ic_rotate" />
+
             <ImageView
                 android:id="@+id/ivRebase"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
                 android:foreground="?android:selectableItemBackground"
                 android:padding="5dp"
-                android:src="@drawable/ic_align"
-                android:layout_centerInParent="true"
-                android:layout_centerVertical="true" />
+                android:src="@drawable/ic_align" />
+
             <ImageView
                 android:id="@+id/ivInvert"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
                 android:foreground="?android:selectableItemBackground"
                 android:padding="5dp"
-                android:src="@drawable/ic_invert_colors"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true" />
+                android:src="@drawable/ic_invert_colors" />
         </RelativeLayout>
+
         <FrameLayout
             android:id="@+id/frameLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_margin="10dp"
             android:layout_gravity="center"
+            android:layout_margin="10dp"
             android:layout_weight="8">
 
             <FrameLayout
@@ -79,33 +85,35 @@
                 android:visibility="gone" />
         </FrameLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:gravity="center">
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_large_margin"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
             <Button
                 android:id="@+id/btnImageCrop"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:minWidth="150dp"
-                android:layout_alignParentEnd="true"
-                android:foreground="?android:selectableItemBackground"
-                android:shadowRadius="10"
-                android:textColor="#ffffff" />
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/activity_large_margin"
+                android:layout_weight="1"
+                android:background="@drawable/border_green_2"
+                android:textSize="@dimen/textSizeLarge" />
+
             <Button
                 android:id="@+id/btnClose"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:minWidth="150dp"
-                android:layout_alignParentStart="true"
-                android:foreground="?android:selectableItemBackground"
-                android:shadowRadius="10"
-                android:textColor="#ffffff" />
-        </RelativeLayout>
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/activity_large_margin"
+                android:layout_weight="1"
+                android:background="@drawable/border_red_2"
+                android:textSize="@dimen/textSizeLarge" />
+        </LinearLayout>
     </LinearLayout>
+
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="match_parent"
