--- a/app/src/main/res/layout/paper_activity.xml
+++ b/app/src/main/res/layout/paper_activity.xml
@@ -22,19 +22,21 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_large_margin"
                 android:layout_weight="1"
-                android:background="@drawable/border_1"
+                android:background="@drawable/border_2"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/imageView1"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="300dp"
+                    android:layout_margin="@dimen/activity_mid_margin"
                     android:src="@drawable/icon_finder_camera" />
 
                 <Button
                     android:id="@+id/button_pick1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/activity_large_margin"
                     android:background="@drawable/border_blue_1"
                     android:padding="@dimen/activity_medium_padding"
                     android:text="@string/pick_an_image"
