--- a/app/src/main/res/layout/document_activity.xml
+++ b/app/src/main/res/layout/document_activity.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
-    android:id="@+id/constraintLayout"
     tools:context="com.leon.estimate.activities.DocumentActivity">
 
     <ScrollView
@@ -15,13 +15,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            tools:ignore="ScrollViewSize">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:weightSum="2">
+                android:weightSum="2"
+                tools:ignore="DisableBaselineAlignment">
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -34,9 +36,10 @@
                     <ImageView
                         android:id="@+id/imageView1"
                         android:layout_width="match_parent"
-                        android:layout_height="300dp"
+                        android:layout_height="wrap_content"
                         android:layout_margin="@dimen/activity_mid_margin"
-                        android:src="@drawable/icon_finder_camera" />
+                        android:src="@drawable/icon_finder_camera"
+                        tools:ignore="ContentDescription" />
 
                     <Button
                         android:id="@+id/button_pick1"
@@ -61,9 +64,10 @@
                     <ImageView
                         android:id="@+id/imageView2"
                         android:layout_width="match_parent"
-                        android:layout_height="300dp"
+                        android:layout_height="wrap_content"
                         android:layout_margin="@dimen/activity_mid_margin"
-                        android:src="@drawable/icon_finder_camera" />
+                        android:src="@drawable/icon_finder_camera"
+                        tools:ignore="ContentDescription" />
 
                     <Button
                         android:id="@+id/button_pick2"
@@ -95,9 +99,10 @@
                     <ImageView
                         android:id="@+id/imageView3"
                         android:layout_width="match_parent"
-                        android:layout_height="300dp"
+                        android:layout_height="wrap_content"
                         android:layout_margin="@dimen/activity_mid_margin"
-                        android:src="@drawable/icon_finder_camera" />
+                        android:src="@drawable/icon_finder_camera"
+                        tools:ignore="ContentDescription" />
 
                     <Button
                         android:id="@+id/button_pick3"
@@ -122,9 +127,10 @@
                     <ImageView
                         android:id="@+id/imageView4"
                         android:layout_width="match_parent"
-                        android:layout_height="300dp"
+                        android:layout_height="wrap_content"
                         android:layout_margin="@dimen/activity_mid_margin"
-                        android:src="@drawable/icon_finder_camera" />
+                        android:src="@drawable/icon_finder_camera"
+                        tools:ignore="ContentDescription" />
 
                     <Button
                         android:id="@+id/button_pick4"
@@ -143,7 +149,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:weightSum="2">
+                android:weightSum="2"
+                tools:ignore="DisableBaselineAlignment">
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -158,7 +165,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="300dp"
                         android:layout_margin="@dimen/activity_mid_margin"
-                        android:src="@drawable/icon_finder_camera" />
+                        android:src="@drawable/icon_finder_camera"
+                        tools:ignore="ContentDescription" />
 
                     <Button
                         android:id="@+id/button_pick5"
@@ -183,9 +191,10 @@
                     <ImageView
                         android:id="@+id/imageView6"
                         android:layout_width="match_parent"
-                        android:layout_height="300dp"
+                        android:layout_height="wrap_content"
                         android:layout_margin="@dimen/activity_mid_margin"
-                        android:src="@drawable/icon_finder_camera" />
+                        android:src="@drawable/icon_finder_camera"
+                        tools:ignore="ContentDescription" />
 
                     <Button
                         android:id="@+id/button_pick6"
@@ -201,12 +210,13 @@
             </LinearLayout>
 
             <ImageView
-                android:layout_margin="@dimen/activity_large_margin"
-                android:background="@drawable/border_2"
                 android:id="@+id/imageView7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:weightSum="2" />
+                android:layout_margin="@dimen/activity_large_margin"
+                android:background="@drawable/border_2"
+                android:weightSum="2"
+                tools:ignore="ContentDescription" />
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
