--- a/app/src/main/res/layout/services_fragment.xml
+++ b/app/src/main/res/layout/services_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
-    tools:context="com.leon.estimate.fragments.FormFragment">
+    tools:context="com.leon.estimate.fragments.ServicesFragment">
 
     <LinearLayout
         android:id="@+id/linearLayout1"
