--- a/app/src/main/res/layout/item_address_2.xml
+++ b/app/src/main/res/layout/item_address_2.xml
@@ -11,7 +11,6 @@
     android:padding="@dimen/activity_mid_padding">
 
     <LinearLayout
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -71,7 +70,6 @@
         android:background="@color/blue2" />
 
     <LinearLayout
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -113,7 +111,6 @@
         android:background="@color/blue2" />
 
     <LinearLayout
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -155,7 +152,6 @@
         android:background="@color/blue2" />
 
     <LinearLayout
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -207,4 +203,10 @@
             android:textSize="@dimen/textSizeMedium"
             android:textStyle="bold" />
     </LinearLayout>
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:orientation="vertical"-->
+    <!--        tools:ignore="UselessParent">-->
+    <!--    </LinearLayout>-->
 </LinearLayout>
